migration to java 17