@@ -10,11 +10,10 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
-        <lombok.version>1.18.24</lombok.version>
-        <log4j.version>2.19.0</log4j.version>
-        <sqlite.version>3.39.3.0</sqlite.version>
+        <maven.compiler.release>17</maven.compiler.release>
+        <lombok.version>1.18.26</lombok.version>
+        <log4j.version>2.20.0</log4j.version>
+        <sqlite.version>3.40.1.0</sqlite.version>
     </properties>
 
     <dependencies>
@@ -40,7 +39,18 @@
         <finalName>${project.name}</finalName>
         <plugins>
             <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.10.1</version>
+                <configuration>
+                    <compilerArgs>
+                        <arg>--enable-preview</arg>
+                        <arg>-Xlint:unchecked</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
+            <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
+                <version>3.4.2</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
@@ -66,5 +76,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
